# xhec-mlops-project-student

./: .flake8  .gitignore  Dockerfile.app  README.md  environment.yml  pyproject.toml  requirements-app.in  requirements-app.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: __init__.py  main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: app_config.py  main.py
src/web_service/lib/: __init__.py  inference.py  models.py  utils.py
