[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  { name = "thibault-jauneau", email = "thibault.jauneau@hec.edu" },
  { name = "zakatlassi", email = "zakaria.atlassi-douch@hec.edu" },
  { name = "TLiemNGY", email = "thanh-liem.nguyen.2023@polytechnique.edu" },
  { name = "Safwane-B", email = "safwane-bsd@hotmail.fr" },
  { name = "farahjab", email = "fafou.bouchou@gmail.com" }
]

description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = "3.10"

[project.urls]
"Homepage" = "https://github.com/thibault-jauneau/xhec-mlops-project-student"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["numpy", "pandas"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = ["build", "dist", ".venv"]
